--- a/latex/interfaceEpidemicSimulation_1_1ISimulation.tex
+++ b/latex/interfaceEpidemicSimulation_1_1ISimulation.tex
@@ -41,7 +41,7 @@ Implemented in \mbox{\hyperlink{classEpidemicSimulation_1_1ShoppingCommunitySimu
 
 
 
-Implemented in \mbox{\hyperlink{classEpidemicSimulation_1_1SingleCommunitySimulation_ab91a87487112f7167ec2f2a3759e1aaa}{Epidemic\+Simulation.\+Single\+Community\+Simulation}}.
+Implemented in \mbox{\hyperlink{classEpidemicSimulation_1_1ShoppingCommunitySimulation_aa5085207873b2c1551913e10f3d21098}{Epidemic\+Simulation.\+Shopping\+Community\+Simulation}}, and \mbox{\hyperlink{classEpidemicSimulation_1_1SingleCommunitySimulation_ab91a87487112f7167ec2f2a3759e1aaa}{Epidemic\+Simulation.\+Single\+Community\+Simulation}}.
 
 \mbox{\Hypertarget{interfaceEpidemicSimulation_1_1ISimulation_ace334a4c9f5dd457beb94471364d9977}\label{interfaceEpidemicSimulation_1_1ISimulation_ace334a4c9f5dd457beb94471364d9977}} 
 \index{EpidemicSimulation.ISimulation@{EpidemicSimulation.ISimulation}!Pause@{Pause}}
