--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -175,6 +175,8 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\chapter{epidemic-\/simulation}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{Namespace Index}
 \input{namespaces}
 \chapter{Hierarchical Index}
